After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775808 - win32 maximized window is larger than the extended screen in dual monitor
win32 maximized window is larger than the extended screen in dual monitor
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Win32
3.22.x
Other Windows
: Normal normal
: ---
Assigned To: gtk-win32 maintainers
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-12-08 12:52 UTC by Maxime DOYEN
Modified: 2016-12-24 17:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
log of gtk3-demo with debug (115.67 KB, text/plain)
2016-12-08 12:52 UTC, Maxime DOYEN
  Details
capture of display settings and maximize result (5.86 KB, image/png)
2016-12-08 12:53 UTC, Maxime DOYEN
  Details
GDK W32: Handle maximizing correctly for small primary monitors v1 (4.61 KB, patch)
2016-12-11 16:30 UTC, LRN
committed Details | Review

Description Maxime DOYEN 2016-12-08 12:52:08 UTC
Created attachment 341608 [details]
log of gtk3-demo with debug

Test environment:
- windows 10 Pro x64 1607 build 14393.447
- gtk 3.22.4 32bits from msys

Display settings

- laptop 1366x768 screen 1 at bottom
- full hd screen 1920x1080 at top
- all 2 screen left aligned in extend mode
==> see the capture that show the settings and the bug (maximized window on screen 2 is the red rectangle)

Using gtk3-demo.exe
no matter if you maximize with double-click on the header bar or use the maximize button

case 1: maximize on screen 1 (bottom): OK
case 2: maximize on screen 2 (top: extended one): KO
- the window overflow on the right
   - outside any viewing part
   - close widget on header bar is out of view

- the window overflow on bottom of screen 2 
  - into screen 1, on 272 pixels
  - in all width

gtk3-demo.exe --gdk-debug=events

Here is a debug trace, I've just:
 - launched gtk3-demo with the above command
 - (the window opened on screen 1)
 - drag t to screen 2
 - clicked on maximize
 - (then clicked on my console windows still on screen 1, so you have extra debug lines until I hit ctrl+c)


 Max.
Comment 1 Maxime DOYEN 2016-12-08 12:53:07 UTC
Created attachment 341609 [details]
capture of display settings and maximize result
Comment 2 LRN 2016-12-11 11:20:32 UTC
Reproduced on my machine, and i think i found what causes the bug. Will try to fix it.
Comment 3 LRN 2016-12-11 16:30:19 UTC
Created attachment 341765 [details] [review]
GDK W32: Handle maximizing correctly for small primary monitors v1

Is your issue fixed by this patch?
Comment 4 Ignacio Casal Quinteiro (nacho) 2016-12-12 09:31:40 UTC
Review of attachment 341765 [details] [review]:

Patch looks good, if it works go for it
Comment 5 LRN 2016-12-24 17:31:44 UTC
Since the reporter failed to reply, and since i've managed to reproduce the bug myself and this patch does fix it for me, i'm pushing this into gtk-3-22 branch and closing the bug as "fixed".